Create week-02.md